--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "create-next-example-app",
   "scripts": {
-    "dev": "next",
+    "dev": "node server.js",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
     "antd": "^3.15.0",
     "axios": "^0.18.0",
+    "express": "^4.16.4",
+    "moment": "^2.24.0",
     "next": "8.0.3",
     "next-redux-wrapper": "^3.0.0-alpha.2",
     "react": "16.8.4",
